13) kernel: devres: fix devres_get().<br>
14) kernel: usblp: do not set TASK_INTERRUPTIBLE before lock.<br>
15) kernel: ubi: fix use of "VID" vs. "EC" in header self-check.<br>
16) kernel: ubi: fix return error code.<br>
17) kernel: usb: fix invalid memory access in hub_activate().<br>
18) kernel: net: remove martian_source_keep_err goto label.<br>
19) kernel: net: cdc_mbim: add "NDP to end" quirk for Huawei E3372.<br>
20) kernel: net: usb: cdc_ncm: Adding Dell DW5812 LTE Verizon/DW5813 LTE AT&T Mobile Broadband Card.<br>
21) kernel: net: qmi_wwan: MDM9x30 specific power management.<br>
22) kernel: net: qmi_wwan: remove 1199:9070 device id.<br>
23) kernel: net: qmi_wwan: support "raw IP" mode.<br>
24) kernel: net: qmi_wwan: ignore bogus CDC Union descriptors.<br>
25) kernel: net: add validation for the socket syscall protocol argument.<br>
26) kernel: net: tunnels: improve implement 64 bits statistics.<br>
27) kernel: net: tun: honor IFF_UP in tun_get_user().<br>
28) kernel: net: ppp: define "ppp" device type.<br>
29) kernel: net: pppoe: fix memory corruption in padt work structure.<br>
30) kernel: net: pppox: use standard module auto-loading feature.<br>
31) kernel: net: pptp: verify sockaddr_len in pptp_bind() and pptp_connect().<br>
32) kernel: net: ipv6: restrict hop_limit sysctl setting to range [1; 255].<br>
33) kernel: net: ipv6: only act upon NETDEV_*_TYPE_CHANGE if we have ipv6 addresses.<br>
34) kernel: net: af_unix: avoid use-after-free in ep_remove_wait_queue.<br>
35) kernel: net: af_packet: fix match_fanout_group().<br>
36) kernel: net: fix __netdev_update_features return on ndo_set_features failure.<br>
37) kernel: net: scm: fix PaX detected msg_controllen overflow in scm_detach_fds.<br>
38) kernel: net: snmp: Remove duplicate OUTMCAST stat increment.<br>
39) kernel: net: ip6mr: call del_timer_sync() in ip6mr_free_table().<br>
40) kernel: sched/core: remove false-positive warning from wake_up_process().<br>
<br>
<br>
<br>